Fix word-wrapping of code (#1043)
Long inline `<code>` elements lead to unscrollable horizontal overflow of the page. Fixed by allowing `break-word`.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -133,6 +133,17 @@ blockquote {
 
 
 /**
+ * Code
+ */
+
+code {
+  white-space: pre-wrap;
+  word-break: break-word;
+  word-wrap: break-word;
+}
+
+
+/**
  * Wrapper
  */
 .wrapper {
